remove bg fixed on small screens in apropos page

--- a/assets/sass/partials/_single.scss
+++ b/assets/sass/partials/_single.scss
@@ -11,9 +11,12 @@
     overflow: hidden;
     display: block;
     background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
     background-position: center;
+
+    @media screen and (min-width:768px) {
+        background-size: cover;
+        background-attachment: fixed;
+    }
     
     &.apropos__img-block--01 {
         height: 520px;
